test/spec_vectors/i32/fail/module_16.wat
(module (memory 0) (func $type-unary-operand-empty-in-memory.grow (memory.grow (i32.eqz)) (drop)))